About box reads license text from bundle not file location
* Beacause we now package com.archimatetool.editor in a jar